--- a/base_app/templates/base_app/base.html
+++ b/base_app/templates/base_app/base.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head></head>
+
 <body>
-    {{message}}
+    <h1>{{message}}</h1>hello
+    {% block content %}
+    {% endblock %}
 </body>
