stylize reg pages

--- a/base_app/templates/base_app/password_reset_confirm.html
+++ b/base_app/templates/base_app/password_reset_confirm.html
@@ -1,12 +1,18 @@
-{% extends 'base_app/base.html' %}
+{% extends "layouts/base1.html" %}
 
-{% block content %}
+{% block title %} Password Reset {% endblock %} 
+
+{% block inner-content %}
   {% if validlink %}
-    <h3>Change password</h3>
+    <div class="card-header bg-white border-0 text-center">
+      <h2>Change Password</h2>
+    </div>
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit">Change password</button>
+      <div class="d-grid">
+        <button type="submit" class="btn rounded btn-secondary">Change password</button>
+      </div>
     </form>
   {% else %}
     <p>
