--- a/base_app/templates/base_app/password_reset_done.html
+++ b/base_app/templates/base_app/password_reset_done.html
@@ -1,6 +1,12 @@
-{% extends 'base_app/base.html' %}
+{% extends "layouts/base1.html" %}
 
-{% block content %}
+{% block title %} Password Reset {% endblock %} 
+
+{% block inner-content %}
+  <div class="card-header bg-white border-0 text-center">
+    <h2>Help is on the way!</h2>
+    <p>Let’s get that reset for you</p>
+  </div>
   <p>
     We've emailed you instructions for setting your password, if an account exists with the email you entered.
     You should receive them shortly.
