--- a/base_app/templates/base_app/reset_password.html
+++ b/base_app/templates/base_app/reset_password.html
@@ -1,65 +1,35 @@
-{% extends "layouts/base.html" %}
+{% extends "layouts/base1.html" %}
 
-{% block title %} Contact {% endblock %} 
+{% block title %} Password Reset {% endblock %} 
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
 
-{% block content %}
-
-    <main>
-        
-        {% include 'includes/preloader.html' %}
-
-        <!-- Hero -->
-        <section class="section section-header pb-1 bg-primary text-white">
-            
-        </section>
-
-        
-        <!-- Section -->
-        <section class="section section-lg pt-6">
-            <div class="container">
-                <div class="row justify-content-center mb-5 mb-lg-6">
-                    <div class="col-12 col-lg-8">
-                        <!-- Contact Card -->
-                        <div class="card border-0 p-2 p-md-3 p-lg-5">
-                            <div class="card-header bg-white border-0 text-center">
-                                <h2>Forgot your password?</h2>
-                                <p>Let’s get that reset for you</p>
-                            </div>
-                            <div class="card-body px-0 pt-0">
-                                <form method="post">
-                                    {% csrf_token %}
-                                    <!-- Form -->
-                                    <div class="mb-4">
-                                        <label for="email">Your Email</label>
-                                        <div class="input-group">
-                                            <span class="input-group-text" id="basic-addon4"><span class="fas fa-envelope"></span></span>
-                                            <input type="email" class="form-control" placeholder="example@company.com" id="email" type="email" name="email" autocomplete="email" maxlength="254" required id="id_email" required>
-                                            
-                                        </div>
-                                    </div>
-                                    <!-- End of Form -->
-                                    <div class="d-grid">
-                                        <button type="submit" class="btn rounded btn-secondary">Send Reset Email</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                        <!-- End of Contact Card -->
+{% block inner-content %}
+    <!-- Contact Card -->
+    <div class="card border-0 p-2 p-md-3 p-lg-5">
+        <div class="card-header bg-white border-0 text-center">
+            <h2>Forgot your password?</h2>
+            <p>Let’s get that reset for you</p>
+        </div>
+        <div class="card-body px-0 pt-0">
+            <form method="post">
+                {% csrf_token %}
+                <!-- Form -->
+                <div class="mb-4">
+                    <label for="email">Your Email</label>
+                    <div class="input-group">
+                        <span class="input-group-text" id="basic-addon4"><span class="fas fa-envelope"></span></span>
+                        <input type="email" class="form-control" placeholder="example@company.com" id="email" type="email" name="email" autocomplete="email" maxlength="254" required id="id_email" required>
+                        
                     </div>
                 </div>
-
-            </div>
-        </section>
-        <!-- End of section -->
-
-    </main>
-
-    {% include 'includes/footer.html' %}
-
-{% endblock content %}
-
-<!-- Specific Page JS goes HERE  -->
-{% block javascripts %}{% endblock javascripts %}
+                <!-- End of Form -->
+                <div class="d-grid">
+                    <button type="submit" class="btn rounded btn-secondary">Send Reset Email</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- End of Contact Card -->
+{% endblock inner-content %}
