--- a/base_app/templates/base_app/password_reset_complete.html
+++ b/base_app/templates/base_app/password_reset_complete.html
@@ -1,7 +1,13 @@
-{% extends 'base_app/base.html' %}
+{% extends "layouts/base1.html" %}
 
-{% block content %}
-  <p>
-    Your password has been set. You may go ahead and <a href="{% url 'base_app:login' %}">sign in</a> now.
-  </p>
+{% block title %} Password Reset {% endblock %} 
+
+{% block inner-content %}
+  <div class="card-header bg-white border-0 text-center">
+    <h2>Your password has been set</h2>
+    <p>You may go ahead and <a href="{% url 'base_app:login' %}">sign in</a> now.</p>
+    <div class="d-grid">
+      <a href="{% url 'base_app:login' %}" class="btn rounded btn-secondary">Sign In</a>
+    </div>
+</div>
 {% endblock %}
