--- a/records/templates/records/kidmodel_form.html
+++ b/records/templates/records/kidmodel_form.html
@@ -10,7 +10,7 @@
 {% block inner-content %}
 	<div class="card border-0 p-2 p-md-3 p-lg-5">
 		<div class="card-header bg-white border-0 text-center">
-			<h2>Create a Family entry</h2>
+			<h2>Tell us about your kids</h2>
 			<p>This will help you connect with other local families</p>
 		</div>
 		<div class="card-body px-0 pt-0">
