--- a/records/templates/records/simple_form.html
+++ b/records/templates/records/simple_form.html
@@ -10,8 +10,8 @@
 {% block inner-content %}
 	<div class="card border-0 p-2 p-md-3 p-lg-5">
 		<div class="card-header bg-white border-0 text-center">
-			<h2>Tell us about your kids</h2>
-			<p>This will help you connect with other local families</p>
+			<h2>{{header}}</h2>
+			<p>{{sub_header}}</p>
 		</div>
 		<div class="card-body px-0 pt-0">
 			{% crispy form %}
