--- a/records/templates/records/familymodel_detail.html
+++ b/records/templates/records/familymodel_detail.html
@@ -1,4 +1,5 @@
-{% extends "base_app/base.html" %}
+{% extends "layouts/base1.html" %}
+
 {% load crispy_forms_tags %}
 
 {% block title %} {{page_title}} {% endblock %}
@@ -6,87 +7,48 @@
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
 
-{% block content %}
-
-	<div class="content">
-		<div class="page-inner">
-			<div class="page-header">
-				<h4 class="page-title">{{model_name|title}} id:{{object.pk}} Detail</h4>
-				<ul class="breadcrumbs">
-					<li class="nav-home">
-						<a href="#">
-							<i class="flaticon-home"></i>
-						</a>
-					</li>
-					<li class="separator">
-						<i class="flaticon-right-arrow"></i>
-					</li>
-					<li class="nav-item">
-						<a href="#">{{app_name}}</a>
-					</li>
-                    <li class="separator">
-						<i class="flaticon-right-arrow"></i>
-					</li>
-					<li class="nav-item">
-						<a href="{% url list_view_url %}">{{model_name|title}}</a>
-					</li>
-                    <li class="separator">
-						<i class="flaticon-right-arrow"></i>
-					</li>
-					<li class="nav-item">
-						<a href="#">{{model_name|title}} id:{{object.pk}} Detail</a>
-					</li>
-				</ul>
-			</div>
-			{% if background %}
-			<div class="row">
-				<div class="col-xl-3 col-lg-6">
-                    <div class="card">
-						<div class="card-header">
-							<div class="card-title">
-								<h3>{{background.title|title}}</h3>
-							</div>
-						</div>
-                        <div class="card-body">
-							<div class="table-responsive">
-								<table class="table tabble-hover table-head-bg-primary">
-										<tbody>
-											{% for key,value in background.data.items %}
-												<tr>
-													<td>
-														{{key}}
-													</td>
-													<td>{{value}}</td>
-												</tr>
-											{% endfor %}
-										</tbody>
-								</table>
-							</div>
-                    	</div>
-                	</div>
-					<div class="col-xl-3 col-lg-6">
+{% block inner-content %}
+	<div class="card border-0 p-2 p-md-3 p-lg-5">
+		<div class="card-header bg-white border-0 text-center">
+			<h2>{{header}}</h2>
+			<p>{{sub_header}}</p>
+		</div>
+		<div class="col-12 mb-5 mb-lg-0">
+			<div class="card shadow text-center">
+				<!-- Header -->
+				<div class="card-header bg-white p-3">
+					<div class="table-responsive-sm">
+						<table class="table table-hover">
+							<tr>
+								<td>Name</td>
+								<td>{{ object.name }}</td>
+							</tr>
+							<tr>
+								<td>Zip Code</td>
+								<td>{{ object.zip_code }}</td>
+							</tr>
+						</table>
 					</div>
 				</div>
+				<!-- End Header -->
+				<!-- Content -->
+				<div class="card-body">
+					<h2>Children</h2>
+					<ul class="list-unstyled mb-4">
+						{% for kid in kids %}
+							<li class="list-item pb-3">{{kid.age}}yr old {{kid.gender|default:""}}</li>
+						{% endfor %}
+					</ul>
+					<div class="d-grid"><a hx-get="/records/test/" class="btn btn-primary animate-up-1">Purchase now</a></div>
+				</div>
+				<!-- End Content -->
 			</div>
-			{% endif %}
-            <div class="row">
-				<div class="col-xl-3 col-lg-6">
-                    <div class="card">
-                        <div class="card-body">
-                            {{object.pk}}
-                            {{object}}
-                    	</div>
-                	</div>
-                <div class="col-xl-3 col-lg-6">
-                </div>
-            </div>
 		</div>
 	</div>
-	</div>
 
-{% endblock content %}
+{% endblock inner-content %}
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
-
+<script src="https://unpkg.com/htmx.org@1.6.1"></script>
 {% endblock javascripts %}
